--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="incon" type="images/png" href="./assets/images/appareil.png" />
+    <link rel="icon" type="images/png" href="./assets/images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photographe Nina Carducci - Événements & Portraits à Bordeaux</title>
     <meta name="description"
@@ -99,127 +99,129 @@
             <h2 class="title">Portfolio</h2>
             <figure class="gallery container py-3" style="display: none">
                 <img data-gallery-tag="Concert" class="gallery-item"
-                    src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt=" Photo prise pendant un concert, lumières rouges"/>
+                    src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
+                    alt=" Photo prise pendant un concert, lumières rouges" />
                 <img data-gallery-tag="Entreprises" class="gallery-item"
-                    src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Portait d'entreprise d'un homme en costume"/>
+                    src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
+                    alt="Portait d'entreprise d'un homme en costume" />
                 <img data-gallery-tag="Entreprises" class="gallery-item"
-                    src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt=" Femme qui rit pendant une reunion"/>
+                    src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
+                    alt=" Femme qui rit pendant une reunion" />
                 <img data-gallery-tag="Mariages" class="gallery-item"
-                    src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt=" Zoom sur des mains de mariés"/>
+                    src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
+                    alt=" Zoom sur des mains de mariés" />
                 <img data-gallery-tag="Portrait" class="gallery-item"
-                    src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt=" Portrait d'un homme qui ferme les yeux"/>
+                    src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
+                    alt=" Portrait d'un homme qui ferme les yeux" />
                 <img data-gallery-tag="Mariages" class="gallery-item"
-                    src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Mariés en train de marcher et de rire ensemble"/>
+                    src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
+                    alt="Mariés en train de marcher et de rire ensemble" />
                 <img data-gallery-tag="Portrait" class="gallery-item"
-                    src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portait d'une jeune femme portant des lunettes"/>
+                    src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
+                    alt="Portait d'une jeune femme portant des lunettes" />
                 <img data-gallery-tag="Concert" class="gallery-item"
-                    src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Un chanteur pendant son concert" />
+                    src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
+                    alt="Un chanteur pendant son concert" />
                 <img data-gallery-tag="Entreprises" class="gallery-item"
-                    src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Portrait d'une femme rigolant devant son ordinateur" />
+                    src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
+                    alt="Portrait d'une femme rigolant devant son ordinateur" />
             </figure>
 
-            <div class="quote">
+            <article class="quote">
                 <figure>
                     <blockquote>
-                        <h3 class="quote__text">
+                        <h2 class="quote__text">
                             Un portrait n’est pas une ressemblance. Dès lors qu’une émotion
                             ou qu’un fait est traduit en photo, il cesse d’être un fait pour
                             devenir une opinion. L’inexactitude n’existe pas en
                             photographie. Toutes les photos sont exactes. Aucune d’elles
                             n’est la vérité.
-                        </h3>
+                        </h2>
                     </blockquote>
                     <figcaption class="quote__author">- Richard Avedon</figcaption>
                 </figure>
-            </div>
+            </article>
         </section>
-        <div id="services">
-            <h3 class="title">Mes services</h3>
-            <div class="container">
-                <div class="service">
-                    <div class="service__description">
-                        <h3>Shooting photo</h3>
-                        <p>
-                            Pour capturer vos moments les plus précieux et garder un
-                            souvenir impérissable. Je me déplace en Île-de-France pour
-                            réaliser vos photos
-                        </p>
-                    </div>
+
+        <section id="services">
+            <h2 class="title">Mes services</h2>
+            <ul class="container">
+                <li class="service service__description">
+                    <h3>Shooting photo</h3>
+                    <p>
+                        Pour capturer vos moments les plus précieux et garder un
+                        souvenir impérissable. Je me déplace en Île-de-France pour
+                        réaliser vos photos
+                    </p>
                     <div class="service__price">
                         <h4>350€/demi journée</h4>
                         <span>Matériel, déplacement inclus</span>
                     </div>
-                </div>
-                <div class="service">
-                    <div class="service__description">
-                        <h3>Retouches</h3>
-                        <p>
-                            Vous souhaitez retoucher vos photos pour un résultat
-                            professionnel ? Bénéficier d’un rendu optimal pour vos
-                            publications
-                        </p>
-                    </div>
+                </li>
+                <li class="service service__description">
+                    <h3>Retouches</h3>
+                    <p>
+                        Vous souhaitez retoucher vos photos pour un résultat
+                        professionnel ? Bénéficier d’un rendu optimal pour vos
+                        publications
+                    </p>
                     <div class="service__price">
                         <h4>50€/photo</h4>
                         <span>2 AR par photo</span>
                     </div>
-                </div>
-                <div class="service">
-                    <div class="service__description">
-                        <h3>Album photos</h3>
-                        <p>
-                            Partagez avec vos proches et vos clients les photos des moments
-                            partagés ensemble à travers un album photo personnalisé
-                        </p>
-                    </div>
+                </li>
+                <li class="service service__description">
+                    <h3>Album photos</h3>
+                    <p>
+                        Partagez avec vos proches et vos clients les photos des moments
+                        partagés ensemble à travers un album photo personnalisé
+                    </p>
                     <div class="service__price">
                         <h4>400€ album A4</h4>
                         <span>30 pages recto/verso</span>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="quote">
+                </li>
+            </ul>
+        </section>
+
+        <article class="quote">
             <figure>
                 <blockquote>
-                    <h1 class="quote__text">
+                    <h2 class="quote__text">
                         De manière inconsciente, je crois, je guette un regard, une
                         expression, des traits ou une nostalgie capable de résumer ou plus
                         exactement de révéler une vie
-                    </h1>
+                    </h2>
                 </blockquote>
                 <figcaption class="quote__author">- Richard Avedon</figcaption>
             </figure>
-        </div>
-        <div id="contact">
-            <div class="container">
-                <div class="form-container">
-                    <h3>Une question ? Une demande de devis ?</h3>
-                    <p>
-                        N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24
-                        heures
-                    </p>
-                    <form action="" method="post">
-                        <label>Nom</label>
-                        <input type="text" name="nom" id="nom" />
-                        <label>Email</label>
-                        <input type="email" name="email" id="email" />
-                        <label>Message</label>
-                        <textarea name="message" id="message" cols="30" rows="10"></textarea>
-                        <input type="submit" value="Envoyer" />
-                    </form>
-                </div>
-                <div class="picture right">
-                    <img src="./assets/images/camera.webp" alt="Image d'un appareil photo" />
-                </div>
-            </div>
-        </div>
+        </article>
     </main>
+
+    <footer id="contact">
+        <section class="container form-container">
+            <h3>Une question ? Une demande de devis ?</h3>
+            <p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
+
+            <form action="#" method="post">
+                <label for="nom">Nom</label>
+                <input type="text" name="nom" id="nom">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                <input type="submit" value="Envoyer">
+            </form>
+        </section>
+        <figure class="picture right">
+            <img src="./assets/images/camera.webp" alt="Appareil Photo">
+        </figure>
+    </footer>
+
     <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="./assets/maugallery.js"></script>
     <script src="./assets/scripts.js"></script>
 </body>
-
 </html>
