update html stucture

--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="images/png" href="./assets/images/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Photographe Nina Carducci - Événements & Portraits à Bordeaux</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title> Nina Carducci - Événements & Portraits à Bordeaux</title>
+    <link rel="icon" type="images/png" href="./assets/images/favicon.png">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <meta name="description"
-        content="Photographe professionnelle spécialisée dans les événements, les portraits et les mariages. Capturant les moments précieux avec un style artistique et une approche personnalisée. Basé à Bordeaux, je crée des souvenirs intemporels pour vous et vos proches. Découvrez mon portfolio et réservez votre séance dès aujourd'hui." />
-    <link rel="stylesheet" href="./assets/style.css" />
-    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-        rel="stylesheet" />
+        content="Photographe professionnelle spécialisée dans les événements, les portraits & les mariages. Basé à Bordeaux, découvrez mon portfolio & réservez votre séance."> 
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
+    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="./assets/style.css"> 
 </head>
 
 <body>
@@ -35,7 +37,7 @@
 
     <main>
         <header id="header">
-            <article id="carouselExampleIndicators" class="carousel slide carousel-inner" data-bs-ride="carousel">
+            <figure id="carouselExampleIndicators" class="carousel slide carousel-inner" data-bs-ride="carousel">
                 <figure class="carousel-item active">
                     <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_1.webp" class="d-block w-100"
                         alt="Un homme en costume marche dans la rue sur des rayures blanches et grises" />
@@ -66,7 +68,7 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Suivant</span>
                 </button>
-            </article>
+            </figure>
         </header>
 
         <article id="about">
@@ -129,14 +131,12 @@
 
             <article class="quote">
                 <figure>
-                    <blockquote>
-                        <h2 class="quote__text">
-                            Un portrait n’est pas une ressemblance. Dès lors qu’une émotion
-                            ou qu’un fait est traduit en photo, il cesse d’être un fait pour
-                            devenir une opinion. L’inexactitude n’existe pas en
-                            photographie. Toutes les photos sont exactes. Aucune d’elles
-                            n’est la vérité.
-                        </h2>
+                    <blockquote class="quote__text">
+                        Un portrait n’est pas une ressemblance. Dès lors qu’une émotion
+                        ou qu’un fait est traduit en photo, il cesse d’être un fait pour
+                        devenir une opinion. L’inexactitude n’existe pas en
+                        photographie. Toutes les photos sont exactes. Aucune d’elles
+                        n’est la vérité.
                     </blockquote>
                     <figcaption class="quote__author">- Richard Avedon</figcaption>
                 </figure>
@@ -154,8 +154,8 @@
                         réaliser vos photos
                     </p>
                     <div class="service__price">
-                        <h4>350€/demi journée</h4>
-                        <span>Matériel, déplacement inclus</span>
+                        <b>350€/demi journée</b>
+                        <p>Matériel, déplacement inclus</p>
                     </div>
                 </li>
                 <li class="service service__description">
