--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <meta name="description"
-        content="Photographe professionnelle spécialisée dans les événements, les portraits & les mariages. Basé à Bordeaux, découvrez mon portfolio & réservez votre séance."> 
+        content="Photographe professionnelle spécialisée dans les événements, les portraits & les mariages. Basé à Bordeaux, découvrez mon portfolio & réservez votre séance.">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="./assets/style.css"> 
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
@@ -102,31 +103,31 @@
             <figure class="gallery container py-3" style="display: none">
                 <img data-gallery-tag="Concert" class="gallery-item"
                     src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
-                    alt=" Photo prise pendant un concert, lumières rouges" />
+                    alt=" Photo prise pendant un concert, lumières rouges" loading="lazy"/>
                 <img data-gallery-tag="Entreprises" class="gallery-item"
                     src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
-                    alt="Portait d'entreprise d'un homme en costume" />
+                    alt="Portait d'entreprise d'un homme en costume" loading="lazy" />
                 <img data-gallery-tag="Entreprises" class="gallery-item"
                     src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
-                    alt=" Femme qui rit pendant une reunion" />
+                    alt=" Femme qui rit pendant une reunion" loading="lazy"/>
                 <img data-gallery-tag="Mariages" class="gallery-item"
                     src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
-                    alt=" Zoom sur des mains de mariés" />
+                    alt=" Zoom sur des mains de mariés" loading="lazy"/>
                 <img data-gallery-tag="Portrait" class="gallery-item"
                     src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
-                    alt=" Portrait d'un homme qui ferme les yeux" />
+                    alt=" Portrait d'un homme qui ferme les yeux" loading="lazy"/>
                 <img data-gallery-tag="Mariages" class="gallery-item"
                     src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
-                    alt="Mariés en train de marcher et de rire ensemble" />
+                    alt="Mariés en train de marcher et de rire ensemble" loading="lazy" />
                 <img data-gallery-tag="Portrait" class="gallery-item"
                     src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
-                    alt="Portait d'une jeune femme portant des lunettes" />
+                    alt="Portait d'une jeune femme portant des lunettes" loading="lazy"/>
                 <img data-gallery-tag="Concert" class="gallery-item"
                     src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
-                    alt="Un chanteur pendant son concert" />
+                    alt="Un chanteur pendant son concert" loading="lazy"/>
                 <img data-gallery-tag="Entreprises" class="gallery-item"
                     src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
-                    alt="Portrait d'une femme rigolant devant son ordinateur" />
+                    alt="Portrait d'une femme rigolant devant son ordinateur" loading="lazy" />
             </figure>
 
             <article class="quote">
@@ -166,8 +167,8 @@
                         publications
                     </p>
                     <div class="service__price">
-                        <h4>50€/photo</h4>
-                        <span>2 AR par photo</span>
+                        <b>50€/photo</b>
+                        <p>2 AR par photo</p>
                     </div>
                 </li>
                 <li class="service service__description">
@@ -177,8 +178,8 @@
                         partagés ensemble à travers un album photo personnalisé
                     </p>
                     <div class="service__price">
-                        <h4>400€ album A4</h4>
-                        <span>30 pages recto/verso</span>
+                        <b>400€ album A4</b>
+                        <p>30 pages recto/verso</p>
                     </div>
                 </li>
             </ul>
@@ -196,27 +197,33 @@
                 <figcaption class="quote__author">- Richard Avedon</figcaption>
             </figure>
         </article>
+
+        <section id="contact">
+            <div class="container form-container">
+                <h3>Une question ? Une demande de devis ?</h3>
+                <p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
+
+                <form action="#" method="post">
+                    <label for="nom">Nom</label>
+                    <input type="text" name="nom" id="nom">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email">
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                    <input type="submit" value="Envoyer">
+                </form>
+            </div>
+            <figure class="picture right">
+                <img src="./assets/images/camera.webp" alt="Appareil Photo">
+            </figure>
+        </section>
     </main>
 
-    <footer id="contact">
-        <section class="container form-container">
-            <h3>Une question ? Une demande de devis ?</h3>
-            <p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-
-            <form action="#" method="post">
-                <label for="nom">Nom</label>
-                <input type="text" name="nom" id="nom">
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email">
-                <label for="message">Message</label>
-                <textarea name="message" id="message" cols="30" rows="10"></textarea>
-                <input type="submit" value="Envoyer">
-            </form>
-        </section>
-        <figure class="picture right">
-            <img src="./assets/images/camera.webp" alt="Appareil Photo">
-        </figure>
+    <footer>
+        <p> Du lundi au vendredi de 10h à 19h - 05 56 67 78 89 </p>
+        <p> © Nina Carducci tous droits réservés || Photographe d'événements & portraits à Bordeaux</p><br>
     </footer>
+
 
     <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -224,4 +231,5 @@
     <script src="./assets/maugallery.js"></script>
     <script src="./assets/scripts.js"></script>
 </body>
+
 </html>
