--- a/index.html
+++ b/index.html
@@ -14,6 +14,28 @@
     <meta name="description"
         content="Photographe professionnelle spécialisée dans les événements, les portraits & les mariages. Basé à Bordeaux, découvrez mon portfolio & réservez votre séance.">
 
+    <!-- Microdonnées Schema.org avec des balises meta pour Rich Snippet Google -->
+    <meta itemprop="provider" itemscope itemtype="https://schema.org/LocalBusiness">
+    <meta itemprop="name" content="Nina Carducci">
+    <meta itemprop="description"
+        content="Photographe professionnelle basée à Bordeaux : shootings, retouches et albums photos.">
+    <meta itemprop="address" content="68 avenue Alsace-Lorraine">
+    <meta itemprop="postalCode" content="33200">
+    <meta itemprop="addressLocality" content="Bordeaux">
+    <meta itemprop="addressCountry" content="France">
+    <meta itemprop="telephone" content="+33 5 56 67 78 89">
+    <meta itemprop="openingHours" content="Mo-Fr 10:00-19:00">
+    <meta itemprop="url" content="https://emelinew1.github.io/P9_Nina_Carducci/">
+    <meta itemprop="image" content="assets/images/nina.webp">
+
+	<!-- Balises meta pour Facebook/Twitter/Instagram OpenGraph -->
+    <meta property="og:title" content="Nina Carducci">
+    <meta property="og:description"
+        content="Photographe professionnelle basée à Bordeaux : shootings, retouches et albums photos.">
+    <meta property="og:url" content="https://emelinew1.github.io/P9_Nina_Carducci/">
+    <meta property="og:image" content="assets/images/nina.webp">
+    <meta property="og:type" content="website">
+
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
@@ -103,28 +125,28 @@
             <figure class="gallery container py-3" style="display: none">
                 <img data-gallery-tag="Concert" class="gallery-item"
                     src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
-                    alt=" Photo prise pendant un concert, lumières rouges" loading="lazy"/>
+                    alt=" Photo prise pendant un concert, lumières rouges" loading="lazy" />
                 <img data-gallery-tag="Entreprises" class="gallery-item"
                     src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
                     alt="Portait d'entreprise d'un homme en costume" loading="lazy" />
                 <img data-gallery-tag="Entreprises" class="gallery-item"
                     src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
-                    alt=" Femme qui rit pendant une reunion" loading="lazy"/>
+                    alt=" Femme qui rit pendant une reunion" loading="lazy" />
                 <img data-gallery-tag="Mariages" class="gallery-item"
                     src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
-                    alt=" Zoom sur des mains de mariés" loading="lazy"/>
+                    alt=" Zoom sur des mains de mariés" loading="lazy" />
                 <img data-gallery-tag="Portrait" class="gallery-item"
                     src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
-                    alt=" Portrait d'un homme qui ferme les yeux" loading="lazy"/>
+                    alt=" Portrait d'un homme qui ferme les yeux" loading="lazy" />
                 <img data-gallery-tag="Mariages" class="gallery-item"
                     src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
                     alt="Mariés en train de marcher et de rire ensemble" loading="lazy" />
                 <img data-gallery-tag="Portrait" class="gallery-item"
                     src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
-                    alt="Portait d'une jeune femme portant des lunettes" loading="lazy"/>
+                    alt="Portait d'une jeune femme portant des lunettes" loading="lazy" />
                 <img data-gallery-tag="Concert" class="gallery-item"
                     src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
-                    alt="Un chanteur pendant son concert" loading="lazy"/>
+                    alt="Un chanteur pendant son concert" loading="lazy" />
                 <img data-gallery-tag="Entreprises" class="gallery-item"
                     src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
                     alt="Portrait d'une femme rigolant devant son ordinateur" loading="lazy" />
