update html structure + size picture

--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
     <meta name="description"
         content="Photographe professionnelle spécialisée dans les événements, les portraits & les mariages. Basé à Bordeaux, découvrez mon portfolio & réservez votre séance.">
 
-    <meta itemprop="url" content="https://emelinew1.github.io/P9_Nina_Carducci/">
-    <meta itemprop="image" content="assets/images/nina.webp">
-
-	<!-- Balises meta pour Facebook/X/Instagram OpenGraph -->
+    <!-- Balises meta pour Facebook/X/Instagram OpenGraph -->
     <meta property="og:title" content="Nina Carducci">
     <meta property="og:description"
         content="Photographe professionnelle basée à Bordeaux : shootings, retouches et albums photos.">
@@ -28,7 +25,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/style.min.css">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
@@ -41,7 +38,7 @@
             <li><a href="#contact">Contact</a></li>
             <li>
                 <a href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" class="social-link">
-                    <img src="assets/images/instagram.webp" alt=" Logo instagram "/>
+                    <img src="assets/images/instagram.webp" alt="Logo instagram" />
                 </a>
             </li>
         </ul>
@@ -50,18 +47,38 @@
     <main>
         <header id="header">
             <figure id="carouselExampleIndicators" class="carousel slide carousel-inner" data-bs-ride="carousel">
-                <figure class="carousel-item active">
+                <picture class="carousel-item active">
+                    <source srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_1-mob.webp"
+                        media="(max-width: 768px)">
+                    <source srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_1-tab.webp"
+                        media="(max-width: 1200px)">
+                    <source srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_1.webp"
+                        media="(min-width: 1200px)">
                     <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_1.webp" class="d-block w-100"
                         alt="Un homme en costume marche dans la rue sur des rayures blanches et grises" />
-                </figure>
-                <figure class="carousel-item">
+                </picture>
+
+                <picture class="carousel-item">
+                    <source srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_1-mob.webp"
+                        media="(max-width: 768px)">
+                    <source srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_1-tab.webp"
+                        media="(max-width: 1200px)">
+                    <source srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_1.webp"
+                        media="(min-width: 1200px)">
                     <img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_1.webp" class="d-block w-100"
                         alt="Deux hommes s'amusant dans une foule à un concert" />
-                </figure>
-                <figure class="carousel-item">
+                </picture>
+
+                <picture class="carousel-item">
+                    <source srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-mob.webp"
+                        media="(max-width: 768px)">
+                    <source srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-tab.webp"
+                        media="(max-width: 1200px)">
+                    <source srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
+                        media="(min-width: 1200px)">
                     <img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100"
                         alt="Deux mariés s'embrassant pendant leur entrée de bal de leur mariage " />
-                </figure>
+                </picture>
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                         class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -84,9 +101,10 @@
         </header>
 
         <article id="about">
-            <figure class="picture left">
-                <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci"/>
-            </figure>
+            <picture class="picture left">
+                <source srcset="./assets/images/nina.webp" media="(min-width: 768px)">
+                <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci" />
+            </picture>
             <section id="about-me">
                 <h2>A propos de moi</h2>
                 <p class="about-me__introduction">
@@ -114,31 +132,31 @@
             <figure class="gallery container py-3" style="display: none">
                 <img data-gallery-tag="Concert" class="gallery-item"
                     src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
-                    alt=" Photo prise pendant un concert, lumières rouges"/>
+                    alt=" Photo prise pendant un concert, lumières rouges" />
                 <img data-gallery-tag="Entreprises" class="gallery-item"
                     src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
-                    alt="Portait d'entreprise d'un homme en costume" loading="lazy"/>
+                    alt="Portait d'entreprise d'un homme en costume" loading="lazy" />
                 <img data-gallery-tag="Entreprises" class="gallery-item"
                     src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
-                    alt=" Femme qui rit pendant une reunion"/>
+                    alt=" Femme qui rit pendant une reunion" />
                 <img data-gallery-tag="Mariages" class="gallery-item"
                     src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
-                    alt=" Zoom sur des mains de mariés"/>
+                    alt=" Zoom sur des mains de mariés" />
                 <img data-gallery-tag="Portrait" class="gallery-item"
                     src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
-                    alt=" Portrait d'un homme qui ferme les yeux"/>
+                    alt=" Portrait d'un homme qui ferme les yeux" />
                 <img data-gallery-tag="Mariages" class="gallery-item"
                     src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
-                    alt="Mariés en train de marcher et de rire ensemble"/>
+                    alt="Mariés en train de marcher et de rire ensemble" />
                 <img data-gallery-tag="Portrait" class="gallery-item"
                     src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
-                    alt="Portait d'une jeune femme portant des lunettes"/>
+                    alt="Portait d'une jeune femme portant des lunettes" />
                 <img data-gallery-tag="Concert" class="gallery-item"
                     src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
-                    alt="Un chanteur pendant son concert"/>
+                    alt="Un chanteur pendant son concert" />
                 <img data-gallery-tag="Entreprises" class="gallery-item"
                     src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
-                    alt="Portrait d'une femme rigolant devant son ordinateur"/>
+                    alt="Portrait d'une femme rigolant devant son ordinateur" />
             </figure>
 
             <article class="quote">
