update no used bootstrap deleted

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     <meta property="og:image" content="assets/images/nina.webp">
     <meta property="og:type" content="website">
 
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/style.css">
 </head>
@@ -56,7 +55,7 @@
                 <picture class="carousel-item active">
                     <source srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_1-mob.webp" media="(max-width: 768px)">
                     <source srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_1-tab.webp" media="(min-width: 769px)">
-                    <img loading="lazy" src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_1.webp" class="d-block w-100" alt="Un homme en costume marche dans la rue sur des rayures blanches et grises">
+                    <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_1.webp" class="d-block w-100" alt="Un homme en costume marche dans la rue sur des rayures blanches et grises">
                 </picture>
 
                 <picture class="carousel-item">
@@ -214,7 +213,7 @@
                 </form>
             </div>
             <figure class="picture right">
-                <img src="./assets/images/camera.webp" alt="Appareil Photo" width="425w">
+                <img src="./assets/images/camera.webp" alt="Appareil Photo">
             </figure>
         </section>
     </main>
